--- a/lang/fr_FR.lang
+++ b/lang/fr_FR.lang
@@ -6,19 +6,19 @@ maintainer: Tajmouati Abdelhak <infopassion64@gmail.com>
 #
 id: Bookmark
 # Missing translation
-msg: 
+msg: Signet
 
 id: Bookmarked
 # Missing translation
-msg: 
+msg: Signet ajouté
 
 id: Copy to clipboard
 # Missing translation
-msg: 
+msg: Copier dans le presse-papier
 
 id: Copy to location...
 # Missing translation
-msg: 
+msg: Copier dans la location...
 
 id: Delete
 msg: Effacer
@@ -31,25 +31,25 @@ msg: File d'attente
 #
 id: Author:
 # Missing translation
-msg: 
+msg: Auteur:
 
 id: Available version:
 msg: Version disponible:
 
 id: Changelog
 # Missing translation
-msg: 
+msg: Changelog
 
 id: Install
 msg: Installer
 
 id: Installed version:
 # Missing translation
-msg: 
+msg: Version installée
 
 id: Status:
 # Missing translation
-msg: 
+msg: Statut
 
 id: Uninstall
 msg: Désinstaller
@@ -84,11 +84,11 @@ msg:
 #
 id: Season %d - Episode %d
 # Missing translation
-msg: 
+msg: Saison %d - Episode %d
 
 id: Seen %d times, %s
 # Missing plural translation for 'Seen %d times, %s' and 'Seen %d time, %s'
-msg[0]: 
+msg[0]: Regardé %d fois, %s
 msg[1]: 
 
 #
@@ -124,7 +124,7 @@ msg: Interface utilisateur
 #
 id: Episode %d - %s
 # Missing translation
-msg: 
+msg: Episode %d - %s
 
 #
 # ./glwskins/flat/loading.view
@@ -146,50 +146,50 @@ msg: Fichier d'évènements systèmes
 #
 id: A/V diff
 # Missing translation
-msg: 
+msg: A/V diff
 
 id: Audio bitrate
 # Missing translation
-msg: 
+msg: Bitrate Audio
 
 id: Audio codec
 # Missing translation
-msg: 
+msg: Codec Audio
 
 id: Audio packets
 # Missing translation
-msg: 
+msg: Packets Audio
 
 id: Buffer usage
 # Missing translation
-msg: 
+msg: Utilisation de la mémoire tampon
 
 id: No media loaded
 msg: Aucun media chargé
 
 id: Remaining buffer
 # Missing translation
-msg: 
+msg: Mémoire tampon disponible
 
 id: Source
 # Missing translation
-msg: 
+msg: Source
 
 id: Video bitrate
 # Missing translation
-msg: 
+msg: Bitrate Video
 
 id: Video codec
 # Missing translation
-msg: 
+msg: Codec Video
 
 id: Video framerate
 # Missing translation
-msg: 
+msg: Débit d'images
 
 id: Video packets
 # Missing translation
-msg: 
+msg: Packets Video
 
 #
 # ./glwskins/flat/menu/sidebar.view
@@ -200,19 +200,19 @@ msg:
 
 id: Page settings
 # Missing translation
-msg: 
+msg: Paramètres de la page
 
 id: Paste
 # Missing translation
-msg: 
+msg: Coller
 
 id: Reload page
 # Missing translation
-msg: 
+msg: Actualiser la page
 
 id: Remove bookmark
 # Missing translation
-msg: 
+msg: Supprimer le signet
 
 id: Settings
 msg: Paramètres
@@ -231,7 +231,7 @@ msg: Quitter
 
 id: Hide media info
 # Missing translation
-msg: 
+msg: Cacher les informations média
 
 id: Hide system info
 msg: Cacher les informations système
@@ -241,7 +241,7 @@ msg: Contrôler le volume
 
 id: Show media info
 # Missing translation
-msg: 
+msg: Afficher les informations média
 
 id: Show system info
 msg: Afficher les informations système
@@ -254,7 +254,7 @@ msg: Veille dans
 
 id: View log
 # Missing translation
-msg: 
+msg: Afficher le log
 
 id: dB
 msg: dB
@@ -303,29 +303,29 @@ msg: Personnalisé
 
 id: Grid
 # Missing translation
-msg: 
+msg: Grille
 
 id: List
 msg: Liste
 
 id: Page layout
 # Missing translation
-msg: 
+msg: Mise en page
 
 id: Search results
 # Missing translation
-msg: 
+msg: Résultats de la recherche
 
 id: TV Season
 # Missing translation
-msg: 
+msg: Saison TV
 
 #
 # ./glwskins/flat/pages/empty.view
 #
 id: No contents
 # Missing translation
-msg: 
+msg: Aucun contenu
 
 #
 # ./glwskins/flat/pages/home.view
@@ -335,7 +335,7 @@ msg: Rejeter
 
 id: Home
 # Missing translation
-msg: 
+msg: Accueil
 
 #
 # ./glwskins/flat/pages/openerror.view
@@ -413,18 +413,18 @@ msg: Le CPU est trop faible pour décoder cette vidéo
 
 id: Next
 # Missing translation
-msg: 
+msg: Suivant
 
 id: Previous
 # Missing translation
-msg: 
+msg: Précédent
 
 #
 # ./glwskins/flat/pages/tvseason.view
 #
 id: Season %d
 # Missing translation
-msg: 
+msg: Saison
 
 #
 # ./glwskins/flat/pages/upgrade.view
@@ -450,7 +450,7 @@ msg: Version actuelle:
 
 id: Download and install
 # Missing translation
-msg: 
+msg: Télécharger et installer
 
 id: Downloading %s
 msg: Téléchargement %s
@@ -463,7 +463,7 @@ msg: Pas de mise à jour disponible
 
 id: Retry
 # Missing translation
-msg: 
+msg: Réessayer
 
 id: Stable
 msg: Stable
@@ -1845,47 +1845,47 @@ msg: Bouclez quand le début/fin de la liste est atteint
 #
 id: %d days ago
 # Missing translation
-msg: 
+msg: Il y a %d jours
 
 id: %d hours ago
 # Missing translation
-msg: 
+msg: Il y a %d heures
 
 id: %d minutes ago
 # Missing translation
-msg: 
+msg: Il y a %d minutes
 
 id: %d months ago
 # Missing translation
-msg: 
+msg: Il y a %d mois
 
 id: %d weeks ago
 # Missing translation
-msg: 
+msg: Il y a %d semaines
 
 id: %d years ago
 # Missing translation
-msg: 
+msg: Il y a %d années
 
 id: Just now
 # Missing translation
-msg: 
+msg: Juste maintenant
 
 id: One day ago
 # Missing translation
-msg: 
+msg: Il y a un jour
 
 id: One hour ago
 # Missing translation
-msg: 
+msg: Il y a une heure
 
 id: One minute ago
 # Missing translation
-msg: 
+msg: Il y a une minute
 
 id: One month ago
 # Missing translation
-msg: 
+msg: Il y a un mois
 
 #
 # ./src/ui/linux/nvidia.c
@@ -1983,7 +1983,7 @@ msg: Reprendre la lecture vidéo
 
 id: Show clock during playback
 # Missing translation
-msg: 
+msg: Afficher l'heure durant la lecture
 
 id: Step when seeking backward
 msg: Étape lorsqu'on cherche à revenir en arrière
